Añadidos servicios de categorías al server
